--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "mern-skeleton",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/server.generated.js",
   "repository": "https://github.com/Jestin64/mern-skeleton.git",
   "author": "Jestin <jestinjois64@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.2.0",
     "nodemon": "^2.0.6",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
+    "webpack-dev-middleware": "^4.0.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
     "development": "nodemon"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.0",
+    "@material-ui/core": "4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -27,6 +34,11 @@
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.11"
+    "mongoose": "^5.10.11",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
